--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "@tailwindcss/typography": "^0.5.10",
     "nuxt": "^3.9.0",
     "nuxt-simple-sitemap": "^4.2.0",
+    "portal-vue": "^3.0.0",
     "prettier": "^3.1.1",
+    "remark-reading-time": "^2.0.1",
+    "sass": "^1.69.5",
     "vue": "^3.3.13",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@morev/vue-transitions": "^2.3.6",
     "@nuxt/content": "^2.10.0",
     "@nuxt/image": "^1.1.0",
-    "@nuxtjs/tailwindcss": "^6.10.3"
+    "@nuxtjs/tailwindcss": "^6.10.3",
+    "animejs": "^3.2.2",
+    "dayjs": "^1.11.10"
   }
 }
