--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@notafunction/prettier-config": "^0.1.0",
+    "@notafunction/eslint-config": "^0.2.0",
+    "@notafunction/prettier-config": "^1.0.2",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/google-fonts": "^3.1.3",
-    "@nuxtjs/plausible": "^0.2.4",
+    "@nuxtjs/plausible": "^1.0.0",
     "@tailwindcss/typography": "^0.5.10",
+    "eslint": "^9.6.0",
     "nuxt": "^3.9.0",
-    "nuxt-simple-sitemap": "^4.2.0",
     "portal-vue": "^3.0.0",
-    "prettier": "^3.1.1",
+    "prettier": "^3.3.2",
     "remark-reading-time": "^2.0.1",
     "sass": "^1.69.5",
     "vue": "^3.3.13",
@@ -28,6 +29,7 @@
     "@morev/vue-transitions": "^2.3.6",
     "@nuxt/content": "^2.10.0",
     "@nuxt/image": "^1.1.0",
+    "@nuxtjs/sitemap": "^5.3.2",
     "@nuxtjs/tailwindcss": "^6.10.3",
     "animejs": "^3.2.2",
     "dayjs": "^1.11.10"
