--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --https",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -29,6 +29,7 @@
     "@morev/vue-transitions": "^2.3.6",
     "@nuxt/content": "^2.10.0",
     "@nuxt/image": "^1.1.0",
+    "@nuxtjs/seo": "^2.0.2",
     "@nuxtjs/sitemap": "^5.3.2",
     "@nuxtjs/tailwindcss": "^6.10.3",
     "animejs": "^3.2.2",
